# FastDEM

./: .gitignore  2025-09-17-core-pipeline-design-proposal.txt  2025-09-18-refactoring.txt  2025-09-19-pipeline-core.txt  2025-09-23-config-system.txt  IMPROVEMENTS_ROADMAP.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  config-integration-plan.md  global-mapping-dreamground-summary.md  implementation-plan.md
height_map_core/: CMakeLists.txt  package.xml
height_map_core/include/height_map_core/: HeightMap.h  height_map.h
height_map_core/include/height_map_core/data/: height_map.h
height_map_core/src/: HeightMap.cpp  height_map.cpp
height_mapping/: CMakeLists.txt  package.xml
height_mapping/benchmark/: profile_pipeline.cpp
height_mapping/benchmarks/: benchmark_height_update.cpp  build.sh
height_mapping/cmake/: height_mappingConfig.cmake.in
height_mapping/config/: default.yaml  global.yaml  global_mapping.yaml  local_mapping.yaml
height_mapping/config/experimental/pipeline/: global.yaml  local.yaml
height_mapping/examples/: README.md
height_mapping/examples/01_hello_mapping/: README.md  main.cpp
height_mapping/examples/common/: data_loader.h  timer.h  visualization.h
height_mapping/include/height_map/: height_map.h  layers.h
height_mapping/include/height_map/io/: hmap_io.h  io.h  ppm_io.h
height_mapping/include/height_mapping/: api.h  core.h  height_map.h  height_mapper.h  height_mapper_config.h  height_mapping.h  io.h  mapper.h  ops.h  simple_mapper.h  types.h
height_mapping/include/height_mapping/algorithms/: HeightMapper.h  algorithms.h  configs.h
height_mapping/include/height_mapping/api/: config.h  factory.h  mapper.h  online_mapper.h  transform_providers.h
height_mapping/include/height_mapping/config/: estimation.h  inpainting.h  map.h  median_filter.h  raycasting.h  (+5 more)
height_mapping/lib/nanoPCL/: .gitignore  CLAUDE.md  GEMINI.md  README.md
height_mapping/lib/ppl/: .gitignore  LICENSE  README.md
height_mapping/scripts/: hmap_loader.py
height_mapping/src/: height_mapper.cpp  height_mapper_config.cpp  mapper.cpp  mapping_config.cpp  online_mapper.cpp  simple_mapper.cpp
height_mapping/src/algorithms/: HeightMapper.cpp  configs.cpp  grid_ground_segmentation.cpp  height_estimation.cpp  inpainting.cpp  raycasting.cpp  statistical_ground_segmentation.cpp
height_mapping/src/detail/: yaml_utils.h
height_mapping/src/estimators/: incremental_mean.cpp  kalman_filter.cpp  moving_average.cpp
height_mapping/src/lab/: mapper.cpp  mapper_config.cpp  stage_registry.cpp
height_mapping/src/ops/: inpainting.cpp  median_filter.cpp  raycasting.cpp  spatial_fusion.cpp
height_mapping/src/pipeline/: stage_registry.cpp
height_mapping/src/ppl/: height_mapper.cpp  height_mapper_config.cpp  stage_registry.cpp
height_mapping/src/ros/: sensor_processor_node.cpp
height_mapping/src/segmenters/: grid_ground_segmenter.cpp
height_mapping_core/: CMakeLists.txt  package.xml
height_mapping_core/config/: default.yaml  global_mapping.yaml
height_mapping_core/include/height_mapping_core/: GlobalMapper.h  HeightMapper.h  config.h  layers.h  mapping_engine.h
height_mapping_core/src/: GlobalMapper.cpp  HeightMapper.cpp  mapping_engine.cpp
height_mapping_core/src/algorithms/: cloud_transformer.cpp  grid_ground_segmentation.cpp  height_estimation.cpp  height_estimator.cpp  map_origin_updater.cpp  move_origin.cpp  passthrough_filter.cpp  raycaster.cpp  raycasting.cpp  statistical_ground_segmentation.cpp  transform_cloud.cpp  voxel_filter.cpp
height_mapping_core/src/config/: config_loader.cpp
height_mapping_core/src/engine/: height_mapping_engine.cpp
height_mapping_core/src/estimators/: KalmanEstimator.cpp  MovingAverageEstimator.cpp  StatMeanEstimator.cpp  estimator_factory.cpp  incremental_mean.cpp  kalman_filter.cpp  moving_average.cpp
height_mapping_core/src/filters/: FastHeightFilter.cpp
height_mapping_core/src/pipeline/: stage_factory.cpp
height_mapping_core/src/stages/: fast_height_filter.cpp  global_mapping.cpp  grid_ground_segmentation.cpp  height_estimation.cpp  map_origin_update.cpp  move_origin.cpp  multi_sensor_sync.cpp  passthrough_filter.cpp  point_cloud_transform.cpp  raycasting.cpp  statistical_ground_segmentation.cpp  transform.cpp  transform_cloud.cpp  voxel_filter.cpp
height_mapping_pipeline/: CMakeLists.txt  package.xml
height_mapping_pipeline/include/height_mapping_pipeline/: mapping_context.h  mapping_engine.h  stage_registration.h
height_mapping_pipeline/src/: mapping_engine.cpp
height_mapping_ros/: CMakeLists.txt  package.xml
height_mapping_ros/config/: default.yaml  engine_config.yaml  engine_config_accurate.yaml  engine_config_fast.yaml  params.yaml  pipeline_visualization.yaml  ros_params.yaml
height_mapping_ros/config/grid_map_visualization/: default.yaml
height_mapping_ros/experimental/launch/: ppl_mapping.launch
height_mapping_ros/experimental/src/: ppl_mapping_node.cpp
height_mapping_ros/include/height_mapping/: global_mapping_node.h  height_mapping_node.h  sensor_processor_node.h
height_mapping_ros/include/height_mapping_ros/: conversions.h  node_config.h  node_parameters.h  parameters.h  params.h  ros_param_watcher.h  tf.h
height_mapping_ros/launch/: global_mapping.launch  grid_map_visualization.launch.xml  height_mapping.launch  height_mapping_with_rviz.launch  local_mapping.launch  mapping.launch
height_mapping_ros/launch/rviz/: height_mapping.rviz
height_mapping_ros/launch/tools/: visualization.launch
height_mapping_ros/src/: global_mapping_node.cpp  height_mapping_node.cpp  sensor_processor_node.cpp
height_mapping_ros/src/adapters/: pointcloud_converter.cpp
height_mapping_ros/src/ros/: global_mapping_node.cpp  height_mapping_node.cpp
height_mapping_ros/src/utils/: pointcloud_converter.cpp
pipeline_core/: CMakeLists.txt
pipeline_core/include/logger/: logger.h
pipeline_core/include/pipeline_core/: config.h  config_loader.h  context.h  exceptions.h  pipeline.h  pipeline_builder.h  pipeline_core.h  pipeline_profiler.h  stage.h  stage_registration.h  stage_registry.h
(+495 files in other folders)
