<?xml version="1.0"?>
<package format="2">
  <name>height_map_core</name>
  <version>0.0.1</version>
  <description>Core height map data structures and utilities</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>grid_map_core</depend>

  <export>
  </export>
</package>