<?xml version="1.0"?>
<package format="2">
  <name>height_mapping_core</name>
  <version>0.0.1</version>
  <description>Core height mapping algorithms (ROS-independent)</description>

  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>height_map_core</depend>
  <depend>libpcl-all-dev</depend>

  <export>
  </export>
</package>