<?xml version="1.0"?>
<package format="2">
  <name>height_mapping_core</name>
  <version>0.0.1</version>
  <description>Core height mapping algorithms and pipeline system</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core dependencies -->
  <depend>height_map_core</depend>
  <depend>eigen</depend>

  <!-- For filters and algorithms -->
  <depend>libpcl-all-dev</depend>

  <!-- For testing -->
  <test_depend>gtest</test_depend>

  <export>
  </export>
</package>