<?xml version="1.0"?>
<package format="2">
  <name>height_mapping_core</name>
  <version>0.0.1</version>
  <description>Core height mapping algorithms and pipeline system</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_core</depend>

  <export>
  </export>
</package>