<?xml version="1.0"?>
<package format="2">
  <name>height_mapping</name>
  <version>0.0.1</version>
  <description>Height mapping algorithms with ROS wrapper for 2.5D terrain mapping</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>grid_map_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>height_map_core</depend>
  <depend>height_mapping_core</depend>
  <depend>libpcl-all-dev</depend>

  <export>
  </export>
</package>