<?xml version="1.0"?>
<package format="2">
  <name>height_mapping_ros</name>
  <version>0.0.1</version>
  <description>ROS wrapper for height mapping library</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>grid_map_ros</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>height_mapping</depend>

  <export>
  </export>
</package>