<?xml version="1.0"?>
<package format="2">
  <name>height_mapping_ros</name>
  <version>1.0.0</version>
  <description>ROS wrapper for height mapping library</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>grid_map_ros</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <!-- Core library (Pure CMake package) -->
  <build_depend>height_mapping</build_depend>

  <export>
  </export>
</package>
